kubernetes-dashboard/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k3s.gladeos.dev`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-bridge
          port: 443
      middlewares:
        - name: default-headers
        - name: ip-whitelist
        - name: forward-auth
  tls:
    secretName: gladeos-dev-tls #production
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-bridge
  namespace: default
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
  ports:
    - port: 443
